@@ -40,7 +40,7 @@
 static GimpActionEntry colormap_editor_actions[] =
 {
   { "colormap-editor-popup", GIMP_STOCK_INDEXED_PALETTE,
-    N_("Indexed Palette Menu"), NULL, NULL, NULL,
+    N_("Colormap Menu"), NULL, NULL, NULL,
     GIMP_HELP_INDEXED_PALETTE_DIALOG },
 
   { "colormap-editor-edit-color", GIMP_STOCK_EDIT,
